[project]
name = "lab5-metrics"
version = "0.1.0"
description = ""
authors = [
    {name = "Joaquinmendez2002-maker",email = "joaquinmendez2002@icloud.com"}
]
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
